Fix z-index issue with the URLs

--- a/src/sitemap.less
+++ b/src/sitemap.less
@@ -81,7 +81,6 @@ body {
 
 .sitenav ul li {
 	position: relative;
-	z-index: 2;
 }
 
 .sitenav > ul > li > ul ul li:before {
@@ -143,6 +142,7 @@ body {
 		background: var(--card-bgcolor);
 		box-shadow: 0 0 0 4px var(--card-bgcolor);
 		border-radius: 0.1em;
+		z-index: 1;
 	}
 }
 
